# gpusched

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  common.py  gen_sweep.py  summarize.py  train_ddpm.py  train_gpt.py
src/gpusched/: __init__.py  allocation.py  backend.py  cli.py  jobspec.py  journal.py  scheduler.py  simjob.py  testing.py
tests/: test_allocation.py  test_cancel_orphans.py  test_jobspec.py  test_live_queue.py  test_scheduler.py  test_spike_buffer.py
